[workspace]
resolver = "2"
members = [
  "crates/node",
  "crates/runtime",
  "crates/pallets/starknet/runtime_api/",
  "crates/pallets/starknet",
  "crates/primitives/genesis-config/",
  "crates/primitives/digest-log",
  "crates/primitives/snos-output",
  "crates/primitives/transactions",
  "crates/primitives/felt",
  "crates/primitives/hashers",
  "crates/primitives/block",
  "crates/primitives/starknet-inherent",
  "crates/primitives/storage",
  "crates/primitives/chain-id",
  "crates/primitives/messages",
  "crates/primitives/program-hash",
  "crates/client/genesis-data-provider",
  "crates/client/db",
  "crates/client/rpc-core",
  "crates/client/rpc",
  "crates/client/mapping-sync",
  "crates/client/storage",
  "crates/client/commitment-state-diff",
  "crates/client/eth-client",
  "crates/client/starknet-block-import",
  "starknet-rpc-test",
  "madara-test-runner",
  "starknet-test-utils",
]
# All previous except for `starknet-rpc-test`
# We don't want `cargo test` to trigger its tests
default-members = [
  "crates/node",
  "crates/runtime",
  "crates/pallets/starknet/runtime_api/",
  "crates/pallets/starknet",
  "crates/primitives/genesis-config/",
  "crates/primitives/digest-log",
  "crates/primitives/transactions",
  "crates/primitives/felt",
  "crates/primitives/hashers",
  "crates/primitives/block",
  "crates/primitives/starknet-inherent",
  "crates/primitives/storage",
  "crates/primitives/chain-id",
  "crates/primitives/messages",
  "crates/primitives/program-hash",
  "crates/client/genesis-data-provider",
  "crates/client/db",
  "crates/client/rpc-core",
  "crates/client/rpc",
  "crates/client/mapping-sync",
  "crates/client/storage",
  "crates/client/commitment-state-diff",
  "crates/client/eth-client",
  "crates/client/starknet-block-import",
  "starknet-test-utils",
]

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
codegen-units = 1    # Setting this to 1 allows for more optimizations at the cost of slower compile time
lto = true           # Enables Link Time Optimization, enabling more aggressive optimizations across the entire codebase
opt-level = 3        # Optimize for speed regardless of binary size or compile time
rpath = false        # Disables adding rpath to the binary

[profile.dev]
incremental = true

[workspace.package]
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>"]
edition = "2021"
repository = "https://github.com/keep-starknet-strange/madara/"
version = "0.8.0"

[workspace.dependencies]
# Substrate frame dependencies
frame-executive = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters"  }
frame-support = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
frame-benchmarking = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
frame-benchmarking-cli = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
frame-system = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
frame-system-benchmarking = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
frame-system-rpc-runtime-api = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
frame-try-runtime = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
substrate-frame-rpc-system = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }

# Substrate primitives dependencies
sp-core = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-std = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-io = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-runtime = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-consensus-aura = { git = "http://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-consensus = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-consensus-grandpa = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-timestamp = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-inherents = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-keyring = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-api = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-blockchain = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-block-builder = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-offchain = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-session = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-transaction-pool = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-version = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-database = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-arithmetic = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-storage = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-state-machine = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-statement-store = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-trie = { version = "22.0.0", git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sp-tracing = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }

# Substrate client dependencies
sc-client-db = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-network = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-network-common = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-network-sync = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-consensus = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
# For integration tests in order to create blocks on demand
sc-consensus-manual-seal = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-consensus-grandpa = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-rpc = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-rpc-api = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-basic-authorship = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-client-api = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-cli = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-executor = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-service = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-telemetry = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-keystore = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-transaction-pool = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-transaction-pool-api = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-offchain = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-consensus-aura = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-block-builder = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-proposer-metrics = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
sc-utils = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
substrate-test-runtime-client = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }


# Substrate build & tools dependencies
substrate-build-script-utils = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }

# Substrate Frame pallet
pallet-aura = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
pallet-grandpa = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
pallet-timestamp = { git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }

# Madara pallets
pallet-starknet = { path = "crates/pallets/starknet" }
pallet-starknet-runtime-api = { path = "crates/pallets/starknet/runtime_api" }
# Madara primtitives
mp-genesis-config = { path = "crates/primitives/genesis-config" }
mp-digest-log = { path = "crates/primitives/digest-log" }
mp-block = { path = "crates/primitives/block" }
mp-fee = { path = "crates/primitives/fee" }
mp-felt = { path = "crates/primitives/felt" }
mp-hashers = { path = "crates/primitives/hashers" }
mp-starknet-inherent = { path = "crates/primitives/starknet-inherent" }
mp-snos-output = { path = "crates/primitives/snos-output" }
mp-storage = { path = "crates/primitives/storage" }
mp-transactions = { path = "crates/primitives/transactions" }
mp-chain-id = { path = "crates/primitives/chain-id" }
mp-simulations = { path = "crates/primitives/simulations" }
mp-program-hash = { path = "crates/primitives/program-hash" }
mp-messages = { path = "crates/primitives/messages" }

# test utils
starknet-test-utils = { path = "starknet-test-utils" }

# Madara client
mc-genesis-data-provider = { path = "crates/client/genesis-data-provider" }
mc-mapping-sync = { path = "crates/client/mapping-sync" }
mc-db = { path = "crates/client/db" }
mc-storage = { path = "crates/client/storage" }
mc-rpc = { path = "crates/client/rpc" }
mc-rpc-core = { path = "crates/client/rpc-core" }
mc-commitment-state-diff = { path = "crates/client/commitment-state-diff" }
mc-l1-messages = { path = "crates/client/l1-messages" }
mc-l1-gas-price = { path = "crates/client/l1-gas-price" }
mc-eth-client = { path = "crates/client/eth-client" }
mc-starknet-block-import = { path = "crates/client/starknet-block-import" }

# Madara runtime
madara-runtime = { path = "crates/runtime" }

# Madara test runner
madara-test-runner = { path = "madara-test-runner" }

# Starknet dependencies
# Cairo Virtual Machine
cairo-vm = { git = "https://github.com/bidzyyys/cairo-vm", branch = "feature/scale-codec", features = [
  "cairo-1-hints",
  "parity-scale-codec",
] }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
starknet-providers = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
starknet-accounts = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
starknet-contract = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }

blockifier = { git = "https://github.com/bidzyyys/blockifier", branch = "feature/scale-codec" }
starknet_api = { git = "https://github.com/bidzyyys/starknet-api", branch = "feature/scale-codec", features = [
  "testing",
  "parity-scale-codec",
] }

# Cairo lang
cairo-lang-starknet = { git = "https://github.com/bidzyyys/cairo.git", branch = "feature/scale-codec" }
cairo-lang-starknet-classes = { git = "https://github.com/bidzyyys/cairo.git", branch = "feature/scale-codec" }
cairo-lang-casm = { git = "https://github.com/bidzyyys/cairo.git", branch = "feature/scale-codec" }
cairo-lang-utils = { git = "https://github.com/bidzyyys/cairo.git", branch = "feature/scale-codec" }

# Ethers: using the same versions as in Anvil
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }

# Zaun
starknet-core-contract-client = { git = "https://github.com/keep-starknet-strange/zaun", package = "starknet-core-contract-client", branch = "main" }


# Other third party dependencies
anyhow = "1.0.80"
flate2 = "1.0.28"
parity-scale-codec = { version = "3.2.2" }
scale-info = { version = "2.10.0" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.20" }
hex = { version = "0.4.3" }
safe-mix = { version = "1.0" }
jsonrpsee = { version = "0.16.3" }
clap = { version = "4.4.8" }
futures = { version = "0.3.29" }
futures-timer = { version = "3.0.3" }
sha3 = { version = "0.10.8" }
reqwest = { version = "0.11.22" }
serde = { version = "1.0.192" }
serde_json = { version = "1.0.108" }
serde_with = { version = "2.3.3" }
bitvec = { version = "1" }
thiserror = "1.0.50"
derive_more = { version = "0.99.17" }
rstest = "0.18.1"
pretty_assertions = "1.4.0"
linked-hash-map = { version = "0.5.6" }
parking_lot = "0.12.1"
async-trait = "0.1.74"
indexmap = "2.2.5"
num-traits = "0.2.17"
num-bigint = "0.4.4"
phf = { version = "0.11" }
url = "2.4.1"
hashbrown = "0.14.2"
tokio = "1.36.0"
openssl = { version = "0.10", features = ["vendored"] }
subxt = "0.29"
assert_matches = "1.5.0"
async-lock = "3.1.0"
rustc-hex = { version = "2.0.0" }
itertools = "0.12.0"
tempfile = "3.2"
