[package]
name = "da-test"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true, default-features = true }
assert_matches = { workspace = true, default-features = true }
async-lock = { workspace = true, default-features = true }
clap = { workspace = true, features = ["std", "derive"] }
ethers = { workspace = true, default-features = true }
flate2 = { workspace = true, default-features = true }
lazy_static = { workspace = true, default-features = true }
reqwest = { workspace = true, default-features = true }
rstest = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
starknet-ff = { workspace = true, default-features = true }
starknet-providers = { workspace = true, default-features = true }
starknet-rpc-test = { path = "../starknet-rpc-test" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "parking_lot"] }
url = { workspace = true }

# madara
mc-data-availability = { workspace = true, features = ["clap"] }

[[test]]
name = "da_state_diffs"
path = "state_diffs.rs"
