[package]
name = "da-test"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true  }
assert_matches = { workspace = true  }
async-lock = { workspace = true  }
clap = { workspace = true, features = ["std", "derive"] }
ethers = { workspace = true  }
flate2 = { workspace = true  }
lazy_static = { workspace = true  }
reqwest = { workspace = true  }
rstest = { workspace = true  }
serde = { workspace = true  }
serde_json = { workspace = true  }
starknet-ff = { workspace = true  }
starknet-providers = { workspace = true  }
starknet-test-utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "parking_lot"] }
url = { workspace = true }

# madara
mc-data-availability = { workspace = true, features = ["clap"] }

[[test]]
name = "da_state_diffs"
path = "state_diffs.rs"
