[package]
name = "da-test"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "derive"] }
ethers = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-ff = { workspace = true }
starknet-providers = { workspace = true }
starknet-test-utils = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "parking_lot"] }

# madara
mc-data-availability = { workspace = true, features = ["clap"] }

[[test]]
name = "da_state_diffs"
path = "state_diffs.rs"
