[package]
name = "madara-test-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
assert_matches = "1.5.0"
async-lock = "3.1.0"
async-trait = "0.1"
derive_more = "0.99.17"
flate2 = { workspace = true }
lazy_static = "1.4.0"
reqwest = "0.11.18"
rstest = "0.18.1"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.107"
starknet-accounts = { workspace = true }
starknet-contract = { workspace = true }
starknet-core = { workspace = true }
starknet-crypto = { workspace = true }
starknet-ff = { workspace = true }
starknet-providers = { workspace = true }
starknet-signers = { workspace = true }
starknet_api = { workspace = true, default-features = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.36.0", features = ["rt", "macros", "parking_lot"] }
url = "2.4.1"

# Temporary dependency
starknet-rpc-test = { path = "../starknet-rpc-test" }
