[package]
name = "kaioshin"
version = "0.1.0-dev"
description = "Kaioshin node."
authors = [
  "Abdelhamid Bakhta <@keep-starknet-strange>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/kaioshin"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/kaioshin"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "kaioshin"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }

sc-cli = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-core = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-executor = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-service = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-telemetry = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-keystore = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-transaction-pool = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-transaction-pool-api = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-consensus-aura = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-consensus-aura = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-consensus = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-consensus = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-finality-grandpa = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-finality-grandpa = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-client-api = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-runtime = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-timestamp = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-inherents = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-keyring = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
frame-system = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-api = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-rpc-api = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-blockchain = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sp-block-builder = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
sc-basic-authorship = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
substrate-frame-rpc-system = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
pallet-transaction-payment-rpc = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
frame-benchmarking-cli = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }

# Local Dependencies
kaioshin-runtime = { path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { optional = true, git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
  "kaioshin-runtime/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["kaioshin-runtime/try-runtime", "try-runtime-cli/try-runtime"]
